# kathoros

./: .gitignore  CHANGELOG.md  Dockerfile.build  FEATURE_UPDATES.md  LESSONS_LEARNED.md  LICENSE  README.md  kathoros_gen.py  main.py  pyproject.toml  requirements-build.txt  requirements-dev.txt  requirements.txt
docs/: import-spec.md  porting-macos.md
kathoros/agents/: context_builder.py  dispatcher.py  envelope.py  import_parser.py  parser.py  prompts.py  worker.py
kathoros/agents/backends/: anthropic_backend.py  gemini_backend.py  ollama_backend.py  openai_backend.py
kathoros/config/: key_store.py
kathoros/core/: constants.py  enums.py  exceptions.py
kathoros/db/: __init__.py  connection.py  migrations.py  queries.py
kathoros/epistemic/: __init__.py  checker.py
kathoros/router/: __init__.py  logger.py  models.py  registry.py  router.py  validator.py
kathoros/services/: __init__.py  git_service.py  global_service.py  project_manager.py  search_service.py  session_service.py  tool_service.py
kathoros/tools/: __init__.py  tool_db_execute.py  tool_file_analyze.py  tool_file_apply_plan.py  tool_graph_update.py  tool_matplot_render.py  tool_object_create.py  tool_object_update.py  tool_sagemath_eval.py
kathoros/ui/: __init__.py  main_window.py  theme.py
kathoros/ui/dialogs/: agent_dialog.py  audit_window.py  (+5 more)
kathoros/utils/: __init__.py  hashing.py  paths.py
scripts/: build_appimage.sh  make_audit_bundle.sh  pre_commit.sh  setup_project_dir.py
tests/smoke/: test_imports.py
tests/unit/: test_enums.py  test_hashing.py  test_paths.py
(+31 files in other folders)
