[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "kathoros"
version = "0.1.0"
description = "Kathoros — Physics Research Platform"
license = { text = "GPL-3.0" }
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.6",
    "PyQt6-QScintilla>=2.14",
    "pymupdf>=1.23",
    "GitPython>=3.1",
    "pandas>=2.0",
    "matplotlib>=3.8",
    "pyqtgraph>=0.13",
    "networkx>=3.2",
    "jsonschema>=4.21",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.3",
    "bandit>=1.7",
    "pip-audit>=2.7",
]

[project.scripts]
kathoros = "main:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
